PP-13760 Fix headers and error messages not wrapping when screen resized (#4552)
- use overflow-wrap: anywhere instead of word-break, because word-break is deprecated whereas overflow-wrap is supported by the vast majority of browsers.
- overflow-wrap is not supported by IE11 but in the unlikely event of admin tool users accessing Pay from IE11, this would not affect functionality.

--- a/src/assets/sass/components/service-settings.scss
+++ b/src/assets/sass/components/service-settings.scss
@@ -48,6 +48,9 @@
 
 .service-settings-pane {
   max-width: 630px;
+  h1, .govuk-error-summary, .govuk-error-message {
+    overflow-wrap: anywhere
+  }
 }
 
 .service-settings-inset-text--grey {
